<resources>
    <string name="app_name">My Wallet Tracker</string>
    <string name="login">Login</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="need_an_account">Need an account?</string>
    <string name="sign_up">SIGN UP!</string>
    <string name="penny_wise">PENNY WISE</string>
    <string name="username">UserName</string>
    <string name="re_enter_password">RE-ENTER PASSWORD</string>
    <string name="todo">TODO</string>
    <string name="create_new_account">Create New Account</string>
    <string name="penny__wise">PENNY WISE</string>
    <string name="expense_tracker_and_budget_manager">Expense Tracker And Budget Manager</string>
    <string name="mad_project">Mad Project</string>
    <string name="enter_integer_values">enter integer values</string>
    <string name="eg_food_rent">eg:food,rent..</string>
    <string name="enter_registered_emailid">Enter Registered EmailId</string>
    <string name="enter_password">Enter Password</string>
</resources>