<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login">

    <TextView
        android:id="@+id/textView"
        android:layout_width="408dp"
        android:layout_height="99dp"
        android:background="#FFC400"
        android:fontFamily="@font/chela_one"
        android:gravity="center"
        android:text="@string/penny_wise"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="italic"
        app:drawableLeftCompat="@drawable/spendeelogo1"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="283dp"
        android:layout_height="122dp"
        android:fontFamily="@font/poppins_regular"

        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.268" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="318dp"
        android:layout_height="40dp"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="117dp"
        android:layout_height="45dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="left"
        android:paddingLeft="1dp"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.517" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="146dp"
        android:layout_height="36dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="left"
        android:paddingLeft="1dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.635" />

    <EditText
        android:id="@+id/editTexLogEmail"
        android:layout_width="346dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="left"
        android:hint="Enter Registered Email Id "
        android:inputType="textEmailAddress"
        android:paddingLeft="9dp"
        android:textColor="@color/black"
        android:textColorHint="#AB000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.571" />

    <EditText
        android:id="@+id/editTextLogPassword"
        android:layout_width="343dp"
        android:layout_height="59dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="left"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingLeft="9dp"
        android:textColor="@color/black"
        android:textColorHint="#AB000000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.711" />

    <Button
        android:id="@+id/logbutton"
        android:layout_width="293dp"
        android:layout_height="53dp"
        android:backgroundTint="#F3BD0C"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="184dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/need_an_account"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.905" />

    <TextView
        android:id="@+id/logsignup"
        android:layout_width="157dp"
        android:layout_height="29dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.947" />
</androidx.constraintlayout.widget.ConstraintLayout>